<resources>
    <string name="app_name">Camera App</string>
    <string name="results_from">Results from </string>
    <string name="manu">Manufacturing Info</string>
    <string name="product">Product</string>
    <string name="origin">Origin of Ingredients</string>
    <string name="Placeholder">Placeholder</string>
    <string name="choose_cat">Choose a Category</string>
    <string name="choose_item">Choose an Item</string>
    <string name="brand_info">Product Information</string>
    <string name="manu_info">Manufacturer Information</string>
    <string name="distance">How far has your product travelled?</string>
    <string name="carbon">Know your Carbon Footprint</string>
    <string name="more_info_manu">The company\'s headquarters is in </string>
    <string name="manu_error">There is no information found about the manufacturing company. </string>
    <string name="origin_error">There is no information about the origins of this product\'s ingredients. </string>
    <string name="more_info_product">The company states that the ingredients for this product are sourced in </string>
    <string name="error">No information found. </string>
    <string name="detector_error">"Could not set up detector"</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Hi there, we need to get your location to see
        where you are! If you deny permissions, we will assume a default location of
        Dublin, Ireland. </string>


    <!--buttons-->
    <string name="EnterBarcode">Scan Barcode</string>
    <string name="lookup_barcode">Type barcode</string>
    <string name="ok">Got it</string>
    <string name="scan_again">Scan Again</string>
    <string name="submit">Submit</string>
    <string name="search_button">Search Item</string>
    <string name="todo">TODO</string>
    <string name="more_info_origin">See this product\'s carbon footprint</string>
    <string name="title_activity_maps">Food Travel Overview</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="get_info_option">Get More Info</string>
    <string name="pick_place">Choose a place</string>
    <string name="truck_info">Shipping goods by truck releases 80 grams of CO2 per km. A
        short trip of 200km is the equivalent of charging 2050 smartphones</string>
    <string name="ship_info">Shipping goods by cargo ships releases dirty fuels into the
        ocean. Ships use some of the worst forms of oil and fuel available, and oil leaks
        are far more common than expected. </string>
    <string name="plane_info">Planes release about 450 grams of CO2 per km travelled! To
        offset one trip from the US East Coast to Ireland, you would have to plant 2.4 acres of
    trees.</string>
    <string name="more_info">More Info</string>
</resources>