<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:text="Some Shipping Facts For You" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="226dp"
            android:layout_height="188dp"
            android:layout_below="@id/Header"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_truck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="189dp"
            android:layout_height="188dp"
            android:layout_below="@id/Header"
            android:gravity="center"
            android:layout_marginLeft="-4dp"
            android:layout_toRightOf="@id/imageView"
            android:text="@string/truck_info"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="match_parent">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="188dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/ic_plane" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="189dp"
        android:layout_height="188dp"
        android:gravity="center"
        android:layout_marginLeft="-4dp"
        android:layout_toRightOf="@id/imageView2"
        android:text="@string/plane_info"
        android:textSize="16sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="match_parent">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="226dp"
            android:layout_height="188dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_ship" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="189dp"
            android:layout_height="188dp"
            android:gravity="center"
            android:layout_marginLeft="-4dp"
            android:layout_toRightOf="@id/imageView3"
            android:text="@string/ship_info"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>

